external-crates/move/crates/move-compiler/tests/move_2024/parser/ability_modifier_infix_postfix_no_fields.snap
error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/ability_modifier_infix_postfix_no_fields.move:3:45
  │
3 │     public native struct Foo has copy, drop has store;
  │                                             ^^^
  │                                             │
  │                                             Unexpected 'has'
  │                                             Expected one of: ',', '{', '(', or ';'

